Enhance configuration and model loading for InternVL3-8B
- Updated environment-specific base paths in both `ivl3_8b_batch_h200.ipynb` and `ivl3_8b_batch_quantized.ipynb`.
- Improved configuration settings for model paths, output directories, and evaluation data handling.
- Made GROUND_TRUTH conditional based on INFERENCE_ONLY mode for better flexibility.
- Refined prompt configuration to ensure proper mapping of document types to YAML files.
- Adjusted universal fields to exclude validation-only fields, ensuring cleaner data processing.
- Enhanced model loading process with robust infrastructure and optimizations for both H200 and V100 configurations.
- Added detailed comments for clarity on configuration choices and their implications on performance.

--- a/ivl3_2b_batch_non_quantized.ipynb
+++ b/ivl3_2b_batch_non_quantized.ipynb
@@ -269,7 +269,109 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "#Cell 4\n# Initialize console and environment configuration\nconsole = Console()\n\n# Environment-specific base paths\nENVIRONMENT_BASES = {\n    'sandbox': '/home/jovyan/nfs_share/tod',\n    'efs': '/efs/shared/PoC_data'\n}\nbase_data_path = ENVIRONMENT_BASES['sandbox']\n\nCONFIG = {\n    # Model settings\n    'MODEL_PATH': '/home/jovyan/nfs_share/models/InternVL3-2B', #DANGER WILL ROBINSON\n    # 'MODEL_PATH': '/home/jovyan/nfs_share/models/InternVL3-8B',\n    # 'MODEL_PATH': '/efs/shared/PTM/InternVL3-2B',\n    \n    # Batch settings\n    'DATA_DIR': f'{base_data_path}/evaluation_data',\n    'GROUND_TRUTH': f'{base_data_path}/evaluation_data/ground_truth.csv',\n    # 'OUTPUT_BASE': f'{base_data_path}/output',\n    'OUTPUT_BASE': f'{base_data_path}/LMM_POC/output',\n    'MAX_IMAGES': None,  # None for all, or set limit\n    'DOCUMENT_TYPES': None,  # None for all, or ['invoice', 'receipt']\n    'ENABLE_MATH_ENHANCEMENT': False,  # Disable mathematical correction for bank statements\n    \n    # Inference and evaluation mode\n    'INFERENCE_ONLY': False,  # Default: True (inference-only mode)\n    \n    # Verbosity control\n    'VERBOSE': True,\n    'SHOW_PROMPTS': True,\n    \n    # InternVL3 optimization settings - NON-QUANTIZED TESTING\n    # TESTING: Non-quantized performance after bug fixes (Rich recursion, prompt repetition)\n    # This follows the official InternVL3 documentation pattern exactly\n    'USE_QUANTIZATION': False,  # TESTING: Disabled to test non-quantized performance\n    'DEVICE_MAP': 'auto',\n    'MAX_NEW_TOKENS': 600,\n    'TORCH_DTYPE': 'bfloat16',\n    'LOW_CPU_MEM_USAGE': True,\n    # Flash Attention: NOT supported on V100, only enable for modern GPUs\n    'USE_FLASH_ATTN': False,  # V100 compatible default\n    \n    # InternVL3-2B TILE CONFIGURATION\n    'MAX_TILES': 18,  # InternVL3-2B config default\n}\n\n# Make GROUND_TRUTH conditional based on INFERENCE_ONLY mode\nif CONFIG['INFERENCE_ONLY']:\n    CONFIG['GROUND_TRUTH'] = None\n\n# ============================================================================\n# PROMPT CONFIGURATION - Explicit file and key mapping\n# ============================================================================\n# This configuration controls which prompt files and keys are used for each\n# document type. You can explicitly override both the file and the key.\n#\n# Structure:\n#   'extraction_files': Maps document types to YAML prompt files\n#   'extraction_keys': (Optional) Maps document types to specific keys in those files\n#\n# If 'extraction_keys' is not specified for a document type, the key will be\n# derived from the document type name (e.g., 'INVOICE' -> 'invoice')\n#\n# For bank statements, structure classification (_flat or _date_grouped) is \n# automatically appended UNLESS you provide a full key in 'extraction_keys'\n# ============================================================================\n\nPROMPT_CONFIG = {\n    # Document type detection configuration\n    'detection_file': 'prompts/document_type_detection.yaml',\n    'detection_key': 'detection',\n    \n    # Extraction prompt file mapping (REQUIRED)\n    'extraction_files': {\n        'INVOICE': 'prompts/internvl3_prompts.yaml',\n        'RECEIPT': 'prompts/internvl3_prompts.yaml', \n        'BANK_STATEMENT': 'prompts/internvl3_prompts.yaml'\n    },\n}\n\n# Import field filtering from config to exclude validation-only fields\nfrom common.config import get_v4_field_list, filter_evaluation_fields\n\n# Get universal field list and filter out validation-only fields\n# CRITICAL: TRANSACTION_AMOUNTS_RECEIVED and ACCOUNT_BALANCE are excluded\n# These fields are only for mathematical validation, not extraction/evaluation\nUNIVERSAL_FIELDS = filter_evaluation_fields(get_v4_field_list())\n\nprint(\"✅ Configuration set up successfully\")\nprint(f\"📂 Evaluation data: {CONFIG['DATA_DIR']}\")\nprint(f\"📊 Ground truth: {CONFIG['GROUND_TRUTH']}\")\nprint(f\"🤖 Model path: {CONFIG['MODEL_PATH']}\")\nprint(f\"📁 Output base: {CONFIG['OUTPUT_BASE']}\")\nprint(f\"📋 Universal fields: {len(UNIVERSAL_FIELDS)} (validation-only fields excluded)\")\nprint(f\"🎯 Mode: {'Inference-only' if CONFIG['INFERENCE_ONLY'] else 'Evaluation mode'}\")\nprint(f\"⚙️  Quantization: {'ENABLED (8-bit)' if CONFIG['USE_QUANTIZATION'] else 'DISABLED (full precision)'}\")\nprint(f\"⚡ Flash Attention: {'ENABLED' if CONFIG['USE_FLASH_ATTN'] else 'DISABLED (V100 compatible)'}\")\nprint(f\"🔲 Max Tiles: {CONFIG['MAX_TILES']} (InternVL3-2B default)\")\nprint(\"🔬 TESTING: Non-quantized InternVL3 performance after bug fixes\")"
+   "source": [
+    "#Cell 4\n",
+    "# Initialize console and environment configuration\n",
+    "console = Console()\n",
+    "\n",
+    "# Environment-specific base paths\n",
+    "ENVIRONMENT_BASES = {\n",
+    "    'sandbox': '/home/jovyan/nfs_share/tod/LMM_POC',\n",
+    "    'efs': '/efs/shared/PoC_data'\n",
+    "}\n",
+    "base_data_path = ENVIRONMENT_BASES['sandbox']\n",
+    "\n",
+    "CONFIG = {\n",
+    "    # Model settings\n",
+    "    'MODEL_PATH': '/home/jovyan/nfs_share/models/InternVL3-2B', #DANGER WILL ROBINSON\n",
+    "    # 'MODEL_PATH': '/home/jovyan/nfs_share/models/InternVL3-8B',\n",
+    "    # 'MODEL_PATH': '/efs/shared/PTM/InternVL3-2B',\n",
+    "    \n",
+    "    # Batch settings\n",
+    "    'DATA_DIR': f'{base_data_path}/evaluation_data',\n",
+    "    'GROUND_TRUTH': f'{base_data_path}/evaluation_data/ground_truth.csv',\n",
+    "    # 'OUTPUT_BASE': f'{base_data_path}/output',\n",
+    "    'OUTPUT_BASE': f'{base_data_path}/output',\n",
+    "    'MAX_IMAGES': None,  # None for all, or set limit\n",
+    "    'DOCUMENT_TYPES': None,  # None for all, or ['invoice', 'receipt']\n",
+    "    'ENABLE_MATH_ENHANCEMENT': False,  # Disable mathematical correction for bank statements\n",
+    "    \n",
+    "    # Inference and evaluation mode\n",
+    "    'INFERENCE_ONLY': False,  # Default: True (inference-only mode)\n",
+    "    \n",
+    "    # Verbosity control\n",
+    "    'VERBOSE': True,\n",
+    "    'SHOW_PROMPTS': True,\n",
+    "    \n",
+    "    # InternVL3 optimization settings - NON-QUANTIZED TESTING\n",
+    "    # TESTING: Non-quantized performance after bug fixes (Rich recursion, prompt repetition)\n",
+    "    # This follows the official InternVL3 documentation pattern exactly\n",
+    "    'USE_QUANTIZATION': False,  # TESTING: Disabled to test non-quantized performance\n",
+    "    'DEVICE_MAP': 'auto',\n",
+    "    'MAX_NEW_TOKENS': 600,\n",
+    "    'TORCH_DTYPE': 'bfloat16',\n",
+    "    'LOW_CPU_MEM_USAGE': True,\n",
+    "    # Flash Attention: NOT supported on V100, only enable for modern GPUs\n",
+    "    'USE_FLASH_ATTN': False,  # V100 compatible default\n",
+    "    \n",
+    "    # InternVL3-2B TILE CONFIGURATION\n",
+    "    'MAX_TILES': 18,  # InternVL3-2B config default\n",
+    "}\n",
+    "\n",
+    "# Make GROUND_TRUTH conditional based on INFERENCE_ONLY mode\n",
+    "if CONFIG['INFERENCE_ONLY']:\n",
+    "    CONFIG['GROUND_TRUTH'] = None\n",
+    "\n",
+    "# ============================================================================\n",
+    "# PROMPT CONFIGURATION - Explicit file and key mapping\n",
+    "# ============================================================================\n",
+    "# This configuration controls which prompt files and keys are used for each\n",
+    "# document type. You can explicitly override both the file and the key.\n",
+    "#\n",
+    "# Structure:\n",
+    "#   'extraction_files': Maps document types to YAML prompt files\n",
+    "#   'extraction_keys': (Optional) Maps document types to specific keys in those files\n",
+    "#\n",
+    "# If 'extraction_keys' is not specified for a document type, the key will be\n",
+    "# derived from the document type name (e.g., 'INVOICE' -> 'invoice')\n",
+    "#\n",
+    "# For bank statements, structure classification (_flat or _date_grouped) is \n",
+    "# automatically appended UNLESS you provide a full key in 'extraction_keys'\n",
+    "# ============================================================================\n",
+    "\n",
+    "PROMPT_CONFIG = {\n",
+    "    # Document type detection configuration\n",
+    "    'detection_file': 'prompts/document_type_detection.yaml',\n",
+    "    'detection_key': 'detection',\n",
+    "    \n",
+    "    # Extraction prompt file mapping (REQUIRED)\n",
+    "    'extraction_files': {\n",
+    "        'INVOICE': 'prompts/internvl3_prompts.yaml',\n",
+    "        'RECEIPT': 'prompts/internvl3_prompts.yaml', \n",
+    "        'BANK_STATEMENT': 'prompts/internvl3_prompts.yaml'\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "# Import field filtering from config to exclude validation-only fields\n",
+    "from common.config import get_v4_field_list, filter_evaluation_fields\n",
+    "\n",
+    "# Get universal field list and filter out validation-only fields\n",
+    "# CRITICAL: TRANSACTION_AMOUNTS_RECEIVED and ACCOUNT_BALANCE are excluded\n",
+    "# These fields are only for mathematical validation, not extraction/evaluation\n",
+    "UNIVERSAL_FIELDS = filter_evaluation_fields(get_v4_field_list())\n",
+    "\n",
+    "print(\"✅ Configuration set up successfully\")\n",
+    "print(f\"📂 Evaluation data: {CONFIG['DATA_DIR']}\")\n",
+    "print(f\"📊 Ground truth: {CONFIG['GROUND_TRUTH']}\")\n",
+    "print(f\"🤖 Model path: {CONFIG['MODEL_PATH']}\")\n",
+    "print(f\"📁 Output base: {CONFIG['OUTPUT_BASE']}\")\n",
+    "print(f\"📋 Universal fields: {len(UNIVERSAL_FIELDS)} (validation-only fields excluded)\")\n",
+    "print(f\"🎯 Mode: {'Inference-only' if CONFIG['INFERENCE_ONLY'] else 'Evaluation mode'}\")\n",
+    "print(f\"⚙️  Quantization: {'ENABLED (8-bit)' if CONFIG['USE_QUANTIZATION'] else 'DISABLED (full precision)'}\")\n",
+    "print(f\"⚡ Flash Attention: {'ENABLED' if CONFIG['USE_FLASH_ATTN'] else 'DISABLED (V100 compatible)'}\")\n",
+    "print(f\"🔲 Max Tiles: {CONFIG['MAX_TILES']} (InternVL3-2B default)\")\n",
+    "print(\"🔬 TESTING: Non-quantized InternVL3 performance after bug fixes\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -321,7 +423,89 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "#Cell 6\n# Load InternVL3 model using DIRECT official pattern (bypassing wrapper)\n# https://internvl.readthedocs.io/en/latest/internvl3.0/quick_start.html\nrprint(\"[bold green]Loading InternVL3 model with official NON-QUANTIZED pattern...[/bold green]\")\nrprint(\"[cyan]🔬 Testing: Non-quantized performance after bug fixes[/cyan]\")\nrprint(\"[cyan]📖 Following: https://internvl.readthedocs.io/en/latest/internvl3.0/quick_start.html[/cyan]\")\n\ntry:\n    # Clear any existing CUDA cache\n    if torch.cuda.is_available():\n        torch.cuda.empty_cache()\n        rprint(\"[blue]🧹 CUDA cache cleared[/blue]\")\n    \n    # Load model using exact official pattern\n    rprint(\"[cyan]📥 Loading model with official parameters...[/cyan]\")\n    model = AutoModel.from_pretrained(\n        CONFIG['MODEL_PATH'],\n        torch_dtype=torch.bfloat16,\n        low_cpu_mem_usage=True,\n        use_flash_attn=False,  # V100 compatible\n        trust_remote_code=True,\n        device_map=\"auto\"  # Distribute across available GPUs\n    ).eval()\n    \n    # Load tokenizer\n    rprint(\"[cyan]📥 Loading tokenizer...[/cyan]\")\n    tokenizer = AutoTokenizer.from_pretrained(\n        CONFIG['MODEL_PATH'],\n        trust_remote_code=True,\n        use_fast=False\n    )\n    \n    # Set generation parameters\n    model.config.max_new_tokens = CONFIG['MAX_NEW_TOKENS']\n    \n    # Display model information\n    rprint(\"[green]✅ Model and tokenizer loaded successfully![/green]\")\n    \n    # GPU memory check\n    if torch.cuda.is_available():\n        allocated = torch.cuda.memory_allocated() / 1e9\n        reserved = torch.cuda.memory_reserved() / 1e9\n        total = torch.cuda.get_device_properties(0).total_memory / 1e9\n        rprint(f\"[blue]📊 GPU Memory: {allocated:.2f}GB allocated, {reserved:.2f}GB reserved, {total:.0f}GB total[/blue]\")\n        rprint(f\"[blue]🔍 Memory usage: {(allocated/total*100):.1f}%[/blue]\")\n    \n    # Model parameters\n    param_count = sum(p.numel() for p in model.parameters())\n    rprint(f\"[blue]🔢 Model parameters: {param_count:,}[/blue]\")\n    rprint(f\"[blue]🎯 Data type: {model.dtype}[/blue]\")\n    rprint(f\"[blue]🖥️  Device: {next(model.parameters()).device}[/blue]\")\n    \n    # Add device map diagnostic\n    if hasattr(model, 'hf_device_map'):\n        from collections import Counter\n        device_distribution = Counter(model.hf_device_map.values())\n        rprint(f\"[blue]🔄 Model distribution: {dict(device_distribution)}[/blue]\")\n    else:\n        rprint(\"[blue]📍 No device map found - model placed manually[/blue]\")\n    \n    # Initialize the hybrid processor with loaded model components\n    rprint(\"[cyan]🔧 Initializing document-aware processor...[/cyan]\")\n    hybrid_processor = DocumentAwareInternVL3HybridProcessor(\n        field_list=UNIVERSAL_FIELDS,\n        model_path=CONFIG['MODEL_PATH'],\n        debug=CONFIG['VERBOSE'],\n        pre_loaded_model=model,\n        pre_loaded_tokenizer=tokenizer,\n        prompt_config=PROMPT_CONFIG,  # Single source of truth for configuration!\n        max_tiles=CONFIG['MAX_TILES']  # InternVL3-2B optimized tile configuration\n    )\n    \n    rprint(\"[bold green]✅ InternVL3 NON-QUANTIZED model ready for document-aware processing[/bold green]\")\n    rprint(f\"[cyan]🔲 Using {CONFIG['MAX_TILES']} tiles (InternVL3-2B default)[/cyan]\")\n    rprint(\"[yellow]🔬 If you see gibberish responses, it confirms quantization is still needed for V100[/yellow]\")\n    rprint(\"[yellow]🎉 If responses are clean, it proves the bug fixes resolved the core issues![/yellow]\")\n    \nexcept Exception as e:\n    rprint(f\"[red]❌ Error loading model: {e}[/red]\")\n    rprint(\"[yellow]💡 This may indicate that quantization is still required for V100 GPUs[/yellow]\")\n    raise"
+   "source": [
+    "#Cell 6\n",
+    "# Load InternVL3 model using DIRECT official pattern (bypassing wrapper)\n",
+    "# https://internvl.readthedocs.io/en/latest/internvl3.0/quick_start.html\n",
+    "rprint(\"[bold green]Loading InternVL3 model with official NON-QUANTIZED pattern...[/bold green]\")\n",
+    "rprint(\"[cyan]🔬 Testing: Non-quantized performance after bug fixes[/cyan]\")\n",
+    "rprint(\"[cyan]📖 Following: https://internvl.readthedocs.io/en/latest/internvl3.0/quick_start.html[/cyan]\")\n",
+    "\n",
+    "try:\n",
+    "    # Clear any existing CUDA cache\n",
+    "    if torch.cuda.is_available():\n",
+    "        torch.cuda.empty_cache()\n",
+    "        rprint(\"[blue]🧹 CUDA cache cleared[/blue]\")\n",
+    "    \n",
+    "    # Load model using exact official pattern\n",
+    "    rprint(\"[cyan]📥 Loading model with official parameters...[/cyan]\")\n",
+    "    model = AutoModel.from_pretrained(\n",
+    "        CONFIG['MODEL_PATH'],\n",
+    "        torch_dtype=torch.bfloat16,\n",
+    "        low_cpu_mem_usage=True,\n",
+    "        use_flash_attn=False,  # V100 compatible\n",
+    "        trust_remote_code=True,\n",
+    "        device_map=\"auto\"  # Distribute across available GPUs\n",
+    "    ).eval()\n",
+    "    \n",
+    "    # Load tokenizer\n",
+    "    rprint(\"[cyan]📥 Loading tokenizer...[/cyan]\")\n",
+    "    tokenizer = AutoTokenizer.from_pretrained(\n",
+    "        CONFIG['MODEL_PATH'],\n",
+    "        trust_remote_code=True,\n",
+    "        use_fast=False\n",
+    "    )\n",
+    "    \n",
+    "    # Set generation parameters\n",
+    "    model.config.max_new_tokens = CONFIG['MAX_NEW_TOKENS']\n",
+    "    \n",
+    "    # Display model information\n",
+    "    rprint(\"[green]✅ Model and tokenizer loaded successfully![/green]\")\n",
+    "    \n",
+    "    # GPU memory check\n",
+    "    if torch.cuda.is_available():\n",
+    "        allocated = torch.cuda.memory_allocated() / 1e9\n",
+    "        reserved = torch.cuda.memory_reserved() / 1e9\n",
+    "        total = torch.cuda.get_device_properties(0).total_memory / 1e9\n",
+    "        rprint(f\"[blue]📊 GPU Memory: {allocated:.2f}GB allocated, {reserved:.2f}GB reserved, {total:.0f}GB total[/blue]\")\n",
+    "        rprint(f\"[blue]🔍 Memory usage: {(allocated/total*100):.1f}%[/blue]\")\n",
+    "    \n",
+    "    # Model parameters\n",
+    "    param_count = sum(p.numel() for p in model.parameters())\n",
+    "    rprint(f\"[blue]🔢 Model parameters: {param_count:,}[/blue]\")\n",
+    "    rprint(f\"[blue]🎯 Data type: {model.dtype}[/blue]\")\n",
+    "    rprint(f\"[blue]🖥️  Device: {next(model.parameters()).device}[/blue]\")\n",
+    "    \n",
+    "    # Add device map diagnostic\n",
+    "    if hasattr(model, 'hf_device_map'):\n",
+    "        from collections import Counter\n",
+    "        device_distribution = Counter(model.hf_device_map.values())\n",
+    "        rprint(f\"[blue]🔄 Model distribution: {dict(device_distribution)}[/blue]\")\n",
+    "    else:\n",
+    "        rprint(\"[blue]📍 No device map found - model placed manually[/blue]\")\n",
+    "    \n",
+    "    # Initialize the hybrid processor with loaded model components\n",
+    "    rprint(\"[cyan]🔧 Initializing document-aware processor...[/cyan]\")\n",
+    "    hybrid_processor = DocumentAwareInternVL3HybridProcessor(\n",
+    "        field_list=UNIVERSAL_FIELDS,\n",
+    "        model_path=CONFIG['MODEL_PATH'],\n",
+    "        debug=CONFIG['VERBOSE'],\n",
+    "        pre_loaded_model=model,\n",
+    "        pre_loaded_tokenizer=tokenizer,\n",
+    "        prompt_config=PROMPT_CONFIG,  # Single source of truth for configuration!\n",
+    "        max_tiles=CONFIG['MAX_TILES']  # InternVL3-2B optimized tile configuration\n",
+    "    )\n",
+    "    \n",
+    "    rprint(\"[bold green]✅ InternVL3 NON-QUANTIZED model ready for document-aware processing[/bold green]\")\n",
+    "    rprint(f\"[cyan]🔲 Using {CONFIG['MAX_TILES']} tiles (InternVL3-2B default)[/cyan]\")\n",
+    "    rprint(\"[yellow]🔬 If you see gibberish responses, it confirms quantization is still needed for V100[/yellow]\")\n",
+    "    rprint(\"[yellow]🎉 If responses are clean, it proves the bug fixes resolved the core issues![/yellow]\")\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    rprint(f\"[red]❌ Error loading model: {e}[/red]\")\n",
+    "    rprint(\"[yellow]💡 This may indicate that quantization is still required for V100 GPUs[/yellow]\")\n",
+    "    raise"
+   ]
   },
   {
    "cell_type": "markdown",
