--- a/ivl3_8b_batch_h200.ipynb
+++ b/ivl3_8b_batch_h200.ipynb
@@ -267,7 +267,145 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "#Cell 4\n# Initialize console and environment configuration\nconsole = Console()\n\n# Environment-specific base paths\nENVIRONMENT_BASES = {\n    'sandbox': '/home/jovyan/nfs_share/tod',\n    'efs': '/efs/shared/PoC_data'\n}\nbase_data_path = ENVIRONMENT_BASES['sandbox']\n\nCONFIG = {\n    # Model settings\n    'MODEL_PATH': '/home/jovyan/nfs_share/models/InternVL3-8B',\n    # 'MODEL_PATH': '/efs/shared/PTM/InternVL3-8B',\n    \n    # Batch settings\n    'DATA_DIR': f'{base_data_path}/evaluation_data',\n    'GROUND_TRUTH': f'{base_data_path}/evaluation_data/ground_truth.csv',\n    # 'OUTPUT_BASE': f'{base_data_path}/output',\n    'OUTPUT_BASE': f'{base_data_path}/LMM_POC/output',\n    'MAX_IMAGES': None,  # None for all, or set limit\n    'DOCUMENT_TYPES': None,  # None for all, or ['invoice', 'receipt']\n    'ENABLE_MATH_ENHANCEMENT': False,  # Disable mathematical correction for bank statements\n    \n    # Inference and evaluation mode\n    'INFERENCE_ONLY': False,  # Default: False (evaluation mode)\n    \n    # Verbosity control\n    'VERBOSE': True,\n    'SHOW_PROMPTS': True,\n    \n    # ============================================================================\n    # H200 BFLOAT16 CONFIGURATION - HARDWARE COMPARISON BASELINE\n    # ============================================================================\n    # This configuration uses H200's native bfloat16 support for direct comparison\n    # with V100 float32 performance on the SAME model (InternVL3-8B).\n    #\n    # H200 advantages:\n    # - Native bfloat16 hardware support (compute capability 9.0)\n    # - Flash Attention 2 support for faster inference\n    # - Higher memory bandwidth (4.8 TB/s vs 900 GB/s)\n    #\n    # Configuration:\n    # - bfloat16: Native hardware support, optimal performance\n    # - Flash Attention: Enabled for faster processing\n    # - No quantization: Full precision for fair comparison with V100 float32\n    #\n    # Compare against V100 + float32 to understand:\n    # - Does V100's lack of bfloat16 support hurt accuracy?\n    # - How much faster is H200 with Flash Attention?\n    # - Is hardware upgrade justified for this workload?\n    # ============================================================================\n    'USE_QUANTIZATION': False,  # Full precision for fair comparison\n    'DEVICE_MAP': 'auto',\n    'MAX_NEW_TOKENS': 600,\n    'TORCH_DTYPE': 'bfloat16',  # Native H200 support\n    'LOW_CPU_MEM_USAGE': True,\n    # Flash Attention: ENABLED for H200 (NOT available on V100)\n    'USE_FLASH_ATTN': True,  # H200 optimized - faster inference\n    \n    # H200 TILE CONFIGURATION\n    'MAX_TILES': 36,  # H200 optimized - InternVL3 training max for dense OCR\n}\n\n# Make GROUND_TRUTH conditional based on INFERENCE_ONLY mode\nif CONFIG['INFERENCE_ONLY']:\n    CONFIG['GROUND_TRUTH'] = None\n\n# ============================================================================\n# PROMPT CONFIGURATION - Explicit file and key mapping\n# ============================================================================\n# This configuration controls which prompt files and keys are used for each\n# document type. You can explicitly override both the file and the key.\n#\n# Structure:\n#   'extraction_files': Maps document types to YAML prompt files\n#   'extraction_keys': (Optional) Maps document types to specific keys in those files\n#\n# If 'extraction_keys' is not specified for a document type, the key will be\n# derived from the document type name (e.g., 'INVOICE' -> 'invoice')\n#\n# For bank statements, structure classification (_flat or _date_grouped) is \n# automatically appended UNLESS you provide a full key in 'extraction_keys'\n# ============================================================================\n\nPROMPT_CONFIG = {\n    # Document type detection configuration\n    'detection_file': 'prompts/document_type_detection.yaml',\n    'detection_key': 'detection',\n    \n    # Extraction prompt file mapping (REQUIRED)\n    'extraction_files': {\n        'INVOICE': 'prompts/internvl3_prompts.yaml',\n        'RECEIPT': 'prompts/internvl3_prompts.yaml', \n        'BANK_STATEMENT': 'prompts/internvl3_prompts.yaml'\n    },\n}\n\n# Import field filtering from config to exclude validation-only fields\nfrom common.config import get_v4_field_list, filter_evaluation_fields\n\n# Get universal field list and filter out validation-only fields\n# CRITICAL: TRANSACTION_AMOUNTS_RECEIVED and ACCOUNT_BALANCE are excluded\n# These fields are only for mathematical validation, not extraction/evaluation\nUNIVERSAL_FIELDS = filter_evaluation_fields(get_v4_field_list())\n\nprint(\"✅ Configuration set up successfully\")\nprint(f\"📂 Evaluation data: {CONFIG['DATA_DIR']}\")\nprint(f\"📊 Ground truth: {CONFIG['GROUND_TRUTH']}\")\nprint(f\"🤖 Model: InternVL3-8B\")\nprint(f\"📁 Model path: {CONFIG['MODEL_PATH']}\")\nprint(f\"📁 Output base: {CONFIG['OUTPUT_BASE']}\")\nprint(f\"📋 Universal fields: {len(UNIVERSAL_FIELDS)} (validation-only fields excluded)\")\nprint(f\"🎯 Mode: {'Inference-only' if CONFIG['INFERENCE_ONLY'] else 'Evaluation mode'}\")\nprint(f\"⚙️  Precision: BFLOAT16 (H200 native support - optimal performance)\")\nprint(f\"⚡ Flash Attention: {'ENABLED (H200 optimized - faster inference)' if CONFIG['USE_FLASH_ATTN'] else 'DISABLED'}\")\nprint(f\"🔲 Max Tiles: {CONFIG['MAX_TILES']} (H200 optimized for dense OCR)\")\nprint(\"📊 HARDWARE COMPARISON: H200 bfloat16 vs V100 float32 (same model)\")"
+   "source": [
+    "#Cell 4\n",
+    "# Initialize console and environment configuration\n",
+    "console = Console()\n",
+    "\n",
+    "# Environment-specific base paths\n",
+    "ENVIRONMENT_BASES = {\n",
+    "    'sandbox': '/home/jovyan/nfs_share/tod',\n",
+    "    'efs': '/efs/shared/PoC_data'\n",
+    "}\n",
+    "base_data_path = ENVIRONMENT_BASES['sandbox']\n",
+    "\n",
+    "CONFIG = {\n",
+    "    # Model settings\n",
+    "    'MODEL_PATH': '/home/jovyan/nfs_share/models/InternVL3-8B',\n",
+    "    # 'MODEL_PATH': '/efs/shared/PTM/InternVL3-8B',\n",
+    "    \n",
+    "    # Batch settings\n",
+    "    'DATA_DIR': f'{base_data_path}/evaluation_data',\n",
+    "    'GROUND_TRUTH': f'{base_data_path}/evaluation_data/ground_truth.csv',\n",
+    "    # 'OUTPUT_BASE': f'{base_data_path}/output',\n",
+    "    'OUTPUT_BASE': f'{base_data_path}/LMM_POC/output',\n",
+    "    'MAX_IMAGES': None,  # None for all, or set limit\n",
+    "    'DOCUMENT_TYPES': None,  # None for all, or ['invoice', 'receipt']\n",
+    "    'ENABLE_MATH_ENHANCEMENT': False,  # Disable mathematical correction for bank statements\n",
+    "    \n",
+    "    # Inference and evaluation mode\n",
+    "    'INFERENCE_ONLY': False,  # Default: False (evaluation mode)\n",
+    "    \n",
+    "    # Verbosity control\n",
+    "    'VERBOSE': True,\n",
+    "    'SHOW_PROMPTS': True,\n",
+    "    \n",
+    "    # ============================================================================\n",
+    "    # H200 BFLOAT16 CONFIGURATION - HARDWARE COMPARISON BASELINE\n",
+    "    # ============================================================================\n",
+    "    # This configuration uses H200's native bfloat16 support for direct comparison\n",
+    "    # with V100 float32 performance on the SAME model (InternVL3-8B).\n",
+    "    #\n",
+    "    # H200 advantages:\n",
+    "    # - Native bfloat16 hardware support (compute capability 9.0)\n",
+    "    # - Flash Attention 2 support for faster inference\n",
+    "    # - Higher memory bandwidth (4.8 TB/s vs 900 GB/s)\n",
+    "    #\n",
+    "    # Configuration:\n",
+    "    # - bfloat16: Native hardware support, optimal performance\n",
+    "    # - Flash Attention: Enabled for faster processing\n",
+    "    # - No quantization: Full precision for fair comparison with V100 float32\n",
+    "    #\n",
+    "    # Compare against V100 + float32 to understand:\n",
+    "    # - Does V100's lack of bfloat16 support hurt accuracy?\n",
+    "    # - How much faster is H200 with Flash Attention?\n",
+    "    # - Is hardware upgrade justified for this workload?\n",
+    "    # ============================================================================\n",
+    "    'USE_QUANTIZATION': False,  # Full precision for fair comparison\n",
+    "    'DEVICE_MAP': 'auto',\n",
+    "    'MAX_NEW_TOKENS': 2000,\n",
+    "    'TORCH_DTYPE': 'bfloat16',  # Native H200 support\n",
+    "    'LOW_CPU_MEM_USAGE': True,\n",
+    "    # Flash Attention: ENABLED for H200 (NOT available on V100)\n",
+    "    'USE_FLASH_ATTN': True,  # H200 optimized - faster inference\n",
+    "    \n",
+    "    # H200 TILE CONFIGURATION\n",
+    "    'MAX_TILES': 36,  # H200 optimized - InternVL3 training max for dense OCR\n",
+    "}\n",
+    "\n",
+    "# Make GROUND_TRUTH conditional based on INFERENCE_ONLY mode\n",
+    "if CONFIG['INFERENCE_ONLY']:\n",
+    "    CONFIG['GROUND_TRUTH'] = None\n",
+    "\n",
+    "# ============================================================================\n",
+    "# PROMPT CONFIGURATION - Explicit file and key mapping\n",
+    "# ============================================================================\n",
+    "# This configuration controls which prompt files and keys are used for each\n",
+    "# document type. You can explicitly override both the file and the key.\n",
+    "#\n",
+    "# Structure:\n",
+    "#   'extraction_files': Maps document types to YAML prompt files\n",
+    "#   'extraction_keys': (Optional) Maps document types to specific keys in those files\n",
+    "#\n",
+    "# If 'extraction_keys' is not specified for a document type, the key will be\n",
+    "# derived from the document type name (e.g., 'INVOICE' -> 'invoice')\n",
+    "#\n",
+    "# For bank statements, structure classification (_flat or _date_grouped) is \n",
+    "# automatically appended UNLESS you provide a full key in 'extraction_keys'\n",
+    "# ============================================================================\n",
+    "\n",
+    "PROMPT_CONFIG = {\n",
+    "    # Document type detection configuration\n",
+    "    'detection_file': 'prompts/document_type_detection.yaml',\n",
+    "    'detection_key': 'detection',\n",
+    "    \n",
+    "    # Extraction prompt file mapping (REQUIRED)\n",
+    "    'extraction_files': {\n",
+    "        'INVOICE': 'prompts/internvl3_prompts.yaml',\n",
+    "        'RECEIPT': 'prompts/internvl3_prompts.yaml', \n",
+    "        'BANK_STATEMENT': 'prompts/internvl3_prompts.yaml'\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "# ============================================================================\n",
+    "# UNIVERSAL FIELDS - Explicit field list (no common/config.py dependency)\n",
+    "# ============================================================================\n",
+    "# CRITICAL: TRANSACTION_AMOUNTS_RECEIVED and ACCOUNT_BALANCE are excluded\n",
+    "# These fields are only for mathematical validation, not extraction/evaluation\n",
+    "# ============================================================================\n",
+    "UNIVERSAL_FIELDS = [\n",
+    "    'DOCUMENT_TYPE',\n",
+    "    'BUSINESS_ABN',\n",
+    "    'SUPPLIER_NAME',\n",
+    "    'BUSINESS_ADDRESS',\n",
+    "    'PAYER_NAME',\n",
+    "    'PAYER_ADDRESS',\n",
+    "    'INVOICE_DATE',\n",
+    "    'STATEMENT_DATE_RANGE',\n",
+    "    'LINE_ITEM_DESCRIPTIONS',\n",
+    "    'LINE_ITEM_QUANTITIES',\n",
+    "    'LINE_ITEM_PRICES',\n",
+    "    'LINE_ITEM_TOTAL_PRICES',\n",
+    "    'IS_GST_INCLUDED',\n",
+    "    'GST_AMOUNT',\n",
+    "    'TOTAL_AMOUNT',\n",
+    "    'TRANSACTION_DATES',\n",
+    "    'TRANSACTION_AMOUNTS_PAID',\n",
+    "]\n",
+    "\n",
+    "print(\"✅ Configuration set up successfully\")\n",
+    "print(f\"📂 Evaluation data: {CONFIG['DATA_DIR']}\")\n",
+    "print(f\"📊 Ground truth: {CONFIG['GROUND_TRUTH']}\")\n",
+    "print(f\"🤖 Model: InternVL3-8B\")\n",
+    "print(f\"📁 Model path: {CONFIG['MODEL_PATH']}\")\n",
+    "print(f\"📁 Output base: {CONFIG['OUTPUT_BASE']}\")\n",
+    "print(f\"📋 Universal fields: {len(UNIVERSAL_FIELDS)} (validation-only fields excluded)\")\n",
+    "print(f\"🎯 Mode: {'Inference-only' if CONFIG['INFERENCE_ONLY'] else 'Evaluation mode'}\")\n",
+    "print(f\"⚙️  Precision: BFLOAT16 (H200 native support - optimal performance)\")\n",
+    "print(f\"⚡ Flash Attention: {'ENABLED (H200 optimized - faster inference)' if CONFIG['USE_FLASH_ATTN'] else 'DISABLED'}\")\n",
+    "print(f\"🔲 Max Tiles: {CONFIG['MAX_TILES']} (H200 optimized for dense OCR)\")\n",
+    "print(\"📊 HARDWARE COMPARISON: H200 bfloat16 vs V100 float32 (same model)\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -317,7 +455,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "#Cell 6\n# Load InternVL3-8B model with BFLOAT16 precision for H200 (native hardware support)\nrprint(\"[bold green]Loading InternVL3-8B model with bfloat16 precision (H200 native)...[/bold green]\")\nrprint(\"[cyan]💡 Using torch.bfloat16 with native H200 hardware support[/cyan]\")\n\n# Load InternVL3 model using robust infrastructure with bfloat16\nmodel, tokenizer = load_internvl3_model(\n    model_path=CONFIG['MODEL_PATH'],\n    use_quantization=CONFIG['USE_QUANTIZATION'],  # False - no quantization\n    device_map=CONFIG['DEVICE_MAP'],\n    max_new_tokens=CONFIG['MAX_NEW_TOKENS'],\n    torch_dtype=CONFIG['TORCH_DTYPE'],  # 'bfloat16' - H200 native\n    low_cpu_mem_usage=CONFIG['LOW_CPU_MEM_USAGE'],\n    use_flash_attn=CONFIG['USE_FLASH_ATTN'],  # H200 Flash Attention enabled\n    verbose=CONFIG['VERBOSE']\n)\n\n# Initialize the hybrid processor with loaded model components AND prompt_config\nhybrid_processor = DocumentAwareInternVL3HybridProcessor(\n    field_list=UNIVERSAL_FIELDS,\n    model_path=CONFIG['MODEL_PATH'],\n    debug=CONFIG['VERBOSE'],\n    pre_loaded_model=model,\n    pre_loaded_tokenizer=tokenizer,\n    prompt_config=PROMPT_CONFIG,  # Single source of truth for configuration!\n    max_tiles=CONFIG['MAX_TILES']  # H200 optimized tile configuration\n)\n\n# Model and processor will be used by BatchDocumentProcessor\nrprint(\"[bold green]✅ InternVL3-8B model ready for H200 inference (bfloat16 + Flash Attention)[/bold green]\")\nrprint(f\"[cyan]🔲 Using {CONFIG['MAX_TILES']} tiles (H200 optimized for dense OCR)[/cyan]\")"
+   "source": [
+    "#Cell 6\n",
+    "# Load InternVL3-8B model with BFLOAT16 precision for H200 (native hardware support)\n",
+    "rprint(\"[bold green]Loading InternVL3-8B model with bfloat16 precision (H200 native)...[/bold green]\")\n",
+    "rprint(\"[cyan]💡 Using torch.bfloat16 with native H200 hardware support[/cyan]\")\n",
+    "\n",
+    "# Load InternVL3 model using robust infrastructure with bfloat16\n",
+    "model, tokenizer = load_internvl3_model(\n",
+    "    model_path=CONFIG['MODEL_PATH'],\n",
+    "    use_quantization=CONFIG['USE_QUANTIZATION'],  # False - no quantization\n",
+    "    device_map=CONFIG['DEVICE_MAP'],\n",
+    "    max_new_tokens=CONFIG['MAX_NEW_TOKENS'],\n",
+    "    torch_dtype=CONFIG['TORCH_DTYPE'],  # 'bfloat16' - H200 native\n",
+    "    low_cpu_mem_usage=CONFIG['LOW_CPU_MEM_USAGE'],\n",
+    "    use_flash_attn=CONFIG['USE_FLASH_ATTN'],  # H200 Flash Attention enabled\n",
+    "    verbose=CONFIG['VERBOSE']\n",
+    ")\n",
+    "\n",
+    "# Initialize the hybrid processor with loaded model components AND prompt_config\n",
+    "hybrid_processor = DocumentAwareInternVL3HybridProcessor(\n",
+    "    field_list=UNIVERSAL_FIELDS,\n",
+    "    model_path=CONFIG['MODEL_PATH'],\n",
+    "    debug=CONFIG['VERBOSE'],\n",
+    "    pre_loaded_model=model,\n",
+    "    pre_loaded_tokenizer=tokenizer,\n",
+    "    prompt_config=PROMPT_CONFIG,  # Single source of truth for configuration!\n",
+    "    max_tiles=CONFIG['MAX_TILES']  # H200 optimized tile configuration\n",
+    ")\n",
+    "\n",
+    "# Model and processor will be used by BatchDocumentProcessor\n",
+    "rprint(\"[bold green]✅ InternVL3-8B model ready for H200 inference (bfloat16 + Flash Attention)[/bold green]\")\n",
+    "rprint(f\"[cyan]🔲 Using {CONFIG['MAX_TILES']} tiles (H200 optimized for dense OCR)[/cyan]\")"
+   ]
   },
   {
    "cell_type": "markdown",
