--- a/ivl3_8b_batch_quantized.ipynb
+++ b/ivl3_8b_batch_quantized.ipynb
@@ -258,7 +258,139 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "#Cell 4\n# Initialize console and environment configuration\nconsole = Console()\n\n# Environment-specific base paths\nENVIRONMENT_BASES = {\n    'sandbox': '/home/jovyan/nfs_share/tod',\n    'efs': '/efs/shared/PoC_data'\n}\nbase_data_path = ENVIRONMENT_BASES['sandbox']\n\nCONFIG = {\n    # Model settings\n    'MODEL_PATH': '/home/jovyan/nfs_share/models/InternVL3-8B',\n    # 'MODEL_PATH': '/efs/shared/PTM/InternVL3-8B',\n    \n    # Batch settings\n    'DATA_DIR': f'{base_data_path}/evaluation_data',\n    'GROUND_TRUTH': f'{base_data_path}/evaluation_data/ground_truth.csv',\n    # 'OUTPUT_BASE': f'{base_data_path}/output',\n    'OUTPUT_BASE': f'{base_data_path}/LMM_POC/output',\n    'MAX_IMAGES': None,  # None for all, or set limit\n    'DOCUMENT_TYPES': None,  # None for all, or ['invoice', 'receipt']\n    'ENABLE_MATH_ENHANCEMENT': False,  # Disable mathematical correction for bank statements\n    \n    # Inference and evaluation mode\n    'INFERENCE_ONLY': False,  # Default: True (inference-only mode)\n    \n    # Verbosity control\n    'VERBOSE': True,\n    'SHOW_PROMPTS': True,\n    \n    # InternVL3 optimization settings\n    # CRITICAL: InternVL3 models REQUIRE 8-bit quantization on V100 GPUs\n    # Without quantization, the model produces gibberish responses on V100 hardware\n    # For L40 GPUs, you can experiment with False, but revert to True if you see gibberish\n    'USE_QUANTIZATION': True,  # MANDATORY for V100, recommended for other GPUs\n    'DEVICE_MAP': 'auto',\n    'MAX_NEW_TOKENS': 600,\n    'TORCH_DTYPE': 'bfloat16',\n    'LOW_CPU_MEM_USAGE': True,\n    # Flash Attention: NOT supported on V100, only enable for modern GPUs\n    'USE_FLASH_ATTN': False,  # V100 compatible default\n    \n    # V100 TILE CONFIGURATION\n    'MAX_TILES': 14,  # V100 optimized - InternVL3-8B config default\n}\n\n# Make GROUND_TRUTH conditional based on INFERENCE_ONLY mode\nif CONFIG['INFERENCE_ONLY']:\n    CONFIG['GROUND_TRUTH'] = None\n\n# ============================================================================\n# PROMPT CONFIGURATION - Explicit file and key mapping\n# ============================================================================\n# This configuration controls which prompt files and keys are used for each\n# document type. You can explicitly override both the file and the key.\n#\n# Structure:\n#   'extraction_files': Maps document types to YAML prompt files\n#   'extraction_keys': (Optional) Maps document types to specific keys in those files\n#\n# If 'extraction_keys' is not specified for a document type, the key will be\n# derived from the document type name (e.g., 'INVOICE' -> 'invoice')\n#\n# For bank statements, structure classification (_flat or _date_grouped) is \n# automatically appended UNLESS you provide a full key in 'extraction_keys'\n# ============================================================================\n\nPROMPT_CONFIG = {\n    # Document type detection configuration\n    'detection_file': 'prompts/document_type_detection.yaml',\n    'detection_key': 'detection',\n    \n    # Extraction prompt file mapping (REQUIRED)\n    'extraction_files': {\n        'INVOICE': 'prompts/internvl3_prompts.yaml',\n        'RECEIPT': 'prompts/internvl3_prompts.yaml', \n        'BANK_STATEMENT': 'prompts/internvl3_prompts.yaml'\n    },\n}\n\n# Import field filtering from config to exclude validation-only fields\nfrom common.config import get_v4_field_list, filter_evaluation_fields\n\n# Get universal field list and filter out validation-only fields\n# CRITICAL: TRANSACTION_AMOUNTS_RECEIVED and ACCOUNT_BALANCE are excluded\n# These fields are only for mathematical validation, not extraction/evaluation\nUNIVERSAL_FIELDS = filter_evaluation_fields(get_v4_field_list())\n\nprint(\"✅ Configuration set up successfully\")\nprint(f\"📂 Evaluation data: {CONFIG['DATA_DIR']}\")\nprint(f\"📊 Ground truth: {CONFIG['GROUND_TRUTH']}\")\nprint(f\"🤖 Model path: {CONFIG['MODEL_PATH']}\")\nprint(f\"📁 Output base: {CONFIG['OUTPUT_BASE']}\")\nprint(f\"📋 Universal fields: {len(UNIVERSAL_FIELDS)} (validation-only fields excluded)\")\nprint(f\"🎯 Mode: {'Inference-only' if CONFIG['INFERENCE_ONLY'] else 'Evaluation mode'}\")\nprint(f\"⚙️  Quantization: {'ENABLED (8-bit)' if CONFIG['USE_QUANTIZATION'] else 'DISABLED (full precision)'}\")\nprint(f\"⚡ Flash Attention: {'ENABLED' if CONFIG['USE_FLASH_ATTN'] else 'DISABLED (V100 compatible)'}\")\nprint(f\"🔲 Max Tiles: {CONFIG['MAX_TILES']} (V100 optimized)\")"
+   "source": [
+    "#Cell 4\n",
+    "# Initialize console and environment configuration\n",
+    "console = Console()\n",
+    "\n",
+    "# Environment-specific base paths\n",
+    "ENVIRONMENT_BASES = {\n",
+    "    'sandbox': '/home/jovyan/nfs_share/tod/LMM_POC',\n",
+    "    'efs': '/efs/shared/PoC_data'\n",
+    "}\n",
+    "base_data_path = ENVIRONMENT_BASES['sandbox']\n",
+    "\n",
+    "CONFIG = {\n",
+    "    # Model settings\n",
+    "    'MODEL_PATH': '/home/jovyan/nfs_share/models/InternVL3-8B',\n",
+    "    # 'MODEL_PATH': '/efs/shared/PTM/InternVL3-8B',\n",
+    "    \n",
+    "    # Batch settings\n",
+    "    'DATA_DIR': f'{base_data_path}/evaluation_data',\n",
+    "    'GROUND_TRUTH': f'{base_data_path}/evaluation_data/ground_truth.csv',\n",
+    "    # 'OUTPUT_BASE': f'{base_data_path}/output',\n",
+    "    'OUTPUT_BASE': f'{base_data_path}/output',\n",
+    "    'MAX_IMAGES': None,  # None for all, or set limit\n",
+    "    'DOCUMENT_TYPES': None,  # None for all, or ['invoice', 'receipt']\n",
+    "    'ENABLE_MATH_ENHANCEMENT': False,  # Disable mathematical correction for bank statements\n",
+    "    \n",
+    "    # Inference and evaluation mode\n",
+    "    'INFERENCE_ONLY': False,  # Default: False (evaluation mode)\n",
+    "    \n",
+    "    # Verbosity control\n",
+    "    'VERBOSE': True,\n",
+    "    'SHOW_PROMPTS': True,\n",
+    "    \n",
+    "    # ============================================================================\n",
+    "    # V100 8-BIT QUANTIZATION CONFIGURATION\n",
+    "    # ============================================================================\n",
+    "    # CRITICAL: V100 lacks native bfloat16 support (requires compute capability >= 8.0)\n",
+    "    # This configuration uses 8-bit quantization with float16 for V100 compatibility.\n",
+    "    #\n",
+    "    # Configuration:\n",
+    "    # - 8-bit quantization: Reduces memory usage, enables larger models on V100\n",
+    "    # - float16: V100-compatible precision (NOT bfloat16!)\n",
+    "    # - Flash Attention: DISABLED (not supported on V100)\n",
+    "    #\n",
+    "    # Trade-offs vs float32:\n",
+    "    # - Memory: ~50% reduction\n",
+    "    # - Speed: Faster inference\n",
+    "    # - Accuracy: May have slight degradation vs full precision\n",
+    "    # ============================================================================\n",
+    "    'USE_QUANTIZATION': True,  # 8-bit quantization for V100\n",
+    "    'DEVICE_MAP': 'auto',\n",
+    "    'MAX_NEW_TOKENS': 600,\n",
+    "    'TORCH_DTYPE': 'float16',  # V100 compatible - NOT bfloat16!\n",
+    "    'LOW_CPU_MEM_USAGE': True,\n",
+    "    # Flash Attention: NOT supported on V100, only enable for modern GPUs\n",
+    "    'USE_FLASH_ATTN': False,  # V100 compatible default\n",
+    "    \n",
+    "    # V100 TILE CONFIGURATION\n",
+    "    'MAX_TILES': 14,  # V100 optimized - InternVL3-8B config default\n",
+    "}\n",
+    "\n",
+    "# Make GROUND_TRUTH conditional based on INFERENCE_ONLY mode\n",
+    "if CONFIG['INFERENCE_ONLY']:\n",
+    "    CONFIG['GROUND_TRUTH'] = None\n",
+    "\n",
+    "# ============================================================================\n",
+    "# PROMPT CONFIGURATION - Explicit file and key mapping\n",
+    "# ============================================================================\n",
+    "# This configuration controls which prompt files and keys are used for each\n",
+    "# document type. You can explicitly override both the file and the key.\n",
+    "#\n",
+    "# Structure:\n",
+    "#   'extraction_files': Maps document types to YAML prompt files\n",
+    "#   'extraction_keys': (Optional) Maps document types to specific keys in those files\n",
+    "#\n",
+    "# If 'extraction_keys' is not specified for a document type, the key will be\n",
+    "# derived from the document type name (e.g., 'INVOICE' -> 'invoice')\n",
+    "#\n",
+    "# For bank statements, structure classification (_flat or _date_grouped) is \n",
+    "# automatically appended UNLESS you provide a full key in 'extraction_keys'\n",
+    "# ============================================================================\n",
+    "\n",
+    "PROMPT_CONFIG = {\n",
+    "    # Document type detection configuration\n",
+    "    'detection_file': 'prompts/document_type_detection.yaml',\n",
+    "    'detection_key': 'detection',\n",
+    "    \n",
+    "    # Extraction prompt file mapping (REQUIRED)\n",
+    "    'extraction_files': {\n",
+    "        'INVOICE': 'prompts/internvl3_prompts.yaml',\n",
+    "        'RECEIPT': 'prompts/internvl3_prompts.yaml', \n",
+    "        'BANK_STATEMENT': 'prompts/internvl3_prompts.yaml'\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "# ============================================================================\n",
+    "# UNIVERSAL FIELDS - Explicit field list (no common/config.py dependency)\n",
+    "# ============================================================================\n",
+    "# CRITICAL: TRANSACTION_AMOUNTS_RECEIVED and ACCOUNT_BALANCE are excluded\n",
+    "# These fields are only for mathematical validation, not extraction/evaluation\n",
+    "# ============================================================================\n",
+    "UNIVERSAL_FIELDS = [\n",
+    "    'DOCUMENT_TYPE',\n",
+    "    'BUSINESS_ABN',\n",
+    "    'SUPPLIER_NAME',\n",
+    "    'BUSINESS_ADDRESS',\n",
+    "    'PAYER_NAME',\n",
+    "    'PAYER_ADDRESS',\n",
+    "    'INVOICE_DATE',\n",
+    "    'STATEMENT_DATE_RANGE',\n",
+    "    'LINE_ITEM_DESCRIPTIONS',\n",
+    "    'LINE_ITEM_QUANTITIES',\n",
+    "    'LINE_ITEM_PRICES',\n",
+    "    'LINE_ITEM_TOTAL_PRICES',\n",
+    "    'IS_GST_INCLUDED',\n",
+    "    'GST_AMOUNT',\n",
+    "    'TOTAL_AMOUNT',\n",
+    "    'TRANSACTION_DATES',\n",
+    "    'TRANSACTION_AMOUNTS_PAID',\n",
+    "]\n",
+    "\n",
+    "print(\"✅ Configuration set up successfully\")\n",
+    "print(f\"📂 Evaluation data: {CONFIG['DATA_DIR']}\")\n",
+    "print(f\"📊 Ground truth: {CONFIG['GROUND_TRUTH']}\")\n",
+    "print(f\"🤖 Model path: {CONFIG['MODEL_PATH']}\")\n",
+    "print(f\"📁 Output base: {CONFIG['OUTPUT_BASE']}\")\n",
+    "print(f\"📋 Universal fields: {len(UNIVERSAL_FIELDS)} (validation-only fields excluded)\")\n",
+    "print(f\"🎯 Mode: {'Inference-only' if CONFIG['INFERENCE_ONLY'] else 'Evaluation mode'}\")\n",
+    "print(f\"⚙️  Quantization: {'ENABLED (8-bit)' if CONFIG['USE_QUANTIZATION'] else 'DISABLED (full precision)'}\")\n",
+    "print(f\"⚙️  Precision: {CONFIG['TORCH_DTYPE'].upper()} (V100 compatible)\")\n",
+    "print(f\"⚡ Flash Attention: {'ENABLED' if CONFIG['USE_FLASH_ATTN'] else 'DISABLED (V100 compatible)'}\")\n",
+    "print(f\"🔲 Max Tiles: {CONFIG['MAX_TILES']} (V100 optimized)\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -308,7 +440,38 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "#Cell 6\n# Load InternVL3 model once for entire batch\nrprint(\"[bold green]Loading InternVL3 model with robust optimizations...[/bold green]\")\n\n# Load InternVL3 model using robust infrastructure\nmodel, tokenizer = load_internvl3_model(\n    model_path=CONFIG['MODEL_PATH'],\n    use_quantization=CONFIG['USE_QUANTIZATION'],\n    device_map=CONFIG['DEVICE_MAP'],\n    max_new_tokens=CONFIG['MAX_NEW_TOKENS'],\n    torch_dtype=CONFIG['TORCH_DTYPE'],\n    low_cpu_mem_usage=CONFIG['LOW_CPU_MEM_USAGE'],\n    use_flash_attn=CONFIG['USE_FLASH_ATTN'],  # V100 compatible setting\n    verbose=CONFIG['VERBOSE']\n)\n\n# Initialize the hybrid processor with loaded model components AND prompt_config\nhybrid_processor = DocumentAwareInternVL3HybridProcessor(\n    field_list=UNIVERSAL_FIELDS,\n    model_path=CONFIG['MODEL_PATH'],\n    debug=CONFIG['VERBOSE'],\n    pre_loaded_model=model,\n    pre_loaded_tokenizer=tokenizer,\n    prompt_config=PROMPT_CONFIG,  # Single source of truth for configuration!\n    max_tiles=CONFIG['MAX_TILES']  # V100 optimized tile configuration\n)\n\n# Model and processor will be used by BatchDocumentProcessor\nrprint(\"[bold green]✅ InternVL3 model ready for document-aware processing[/bold green]\")\nrprint(f\"[cyan]🔲 Using {CONFIG['MAX_TILES']} tiles (V100 optimized)[/cyan]\")"
+   "source": [
+    "#Cell 6\n",
+    "# Load InternVL3 model once for entire batch\n",
+    "rprint(\"[bold green]Loading InternVL3 model with robust optimizations...[/bold green]\")\n",
+    "\n",
+    "# Load InternVL3 model using robust infrastructure\n",
+    "model, tokenizer = load_internvl3_model(\n",
+    "    model_path=CONFIG['MODEL_PATH'],\n",
+    "    use_quantization=CONFIG['USE_QUANTIZATION'],\n",
+    "    device_map=CONFIG['DEVICE_MAP'],\n",
+    "    max_new_tokens=CONFIG['MAX_NEW_TOKENS'],\n",
+    "    torch_dtype=CONFIG['TORCH_DTYPE'],\n",
+    "    low_cpu_mem_usage=CONFIG['LOW_CPU_MEM_USAGE'],\n",
+    "    use_flash_attn=CONFIG['USE_FLASH_ATTN'],  # V100 compatible setting\n",
+    "    verbose=CONFIG['VERBOSE']\n",
+    ")\n",
+    "\n",
+    "# Initialize the hybrid processor with loaded model components AND prompt_config\n",
+    "hybrid_processor = DocumentAwareInternVL3HybridProcessor(\n",
+    "    field_list=UNIVERSAL_FIELDS,\n",
+    "    model_path=CONFIG['MODEL_PATH'],\n",
+    "    debug=CONFIG['VERBOSE'],\n",
+    "    pre_loaded_model=model,\n",
+    "    pre_loaded_tokenizer=tokenizer,\n",
+    "    prompt_config=PROMPT_CONFIG,  # Single source of truth for configuration!\n",
+    "    max_tiles=CONFIG['MAX_TILES']  # V100 optimized tile configuration\n",
+    ")\n",
+    "\n",
+    "# Model and processor will be used by BatchDocumentProcessor\n",
+    "rprint(\"[bold green]✅ InternVL3 model ready for document-aware processing[/bold green]\")\n",
+    "rprint(f\"[cyan]🔲 Using {CONFIG['MAX_TILES']} tiles (V100 optimized)[/cyan]\")"
+   ]
   },
   {
    "cell_type": "markdown",
